# redz-exchange-ui

./: # .env.sh  .env.example  .env.local  .env.production  .env.template  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  deploy.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  deploy.yml
.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
app/: globals.css  layout.tsx  page.tsx
components/: AppWalletProvider.tsx  BalancesPanel.tsx  ConfirmTransactionModal.tsx  LaunchInterface.tsx  Navbar.tsx  OpportunitiesPanel.tsx  PoolInterface.tsx  PriceTicker.tsx  ProgrammaticWalletModal.tsx  StatsPanel.tsx  SwapInterface.tsx  TokenSelector.tsx  TopUpModal.tsx
docs/: RPC_CONFIGURATION.md
lib/: balances.ts  chain.ts  constants.ts  instructions.ts  prices.ts  rpc.ts  token.ts  tokens.ts  wallet-utils.ts
programs/redz-exchange/: Anchor.toml  Cargo.toml
programs/redz-exchange/src/: lib.rs
programs/redz-exchange/tests/: redz-exchange.ts
scripts/: rpc-generator.sh  rpc-test.js
tests/: alchemyRoute.test.ts  alchemySdk.test.ts  chain.test.ts  rpcEndpoints.test.ts  token.test.ts
(+111 files in other folders)
