[package]
name = "redz-exchange"
version = "0.1.0"
description = "RedzExchange DeFi Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redz_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"